apple get yo shit together

--- a/Jimmy Liu/Jimmy Liu/View.xib
+++ b/Jimmy Liu/Jimmy Liu/View.xib
@@ -22,7 +22,7 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EwA-zA-PsE">
                     <rect key="frame" x="0.0" y="346" width="300" height="54"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="18"/>
                     <state key="normal" title="Read my story">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
